# adventofcode2022

./: .gitignore  README.md  adventofcode.opam  dune-project
lib/: aoc_day1.ml  aoc_day1.mli  aoc_day2.ml  aoc_day2.mli  dune  vignette.mld
