(lang dune 3.6)

(name adventofcode)
(version df95bfc-dirty)

(generate_opam_files true)

(source
 (github KatrionaGoldmann/adventofcode2022))

(authors "Katriona Goldmann")

(maintainers "Katriona Goldmann")

(license LICENSE)

(documentation https://github.com/KatrionaGoldmann/adventofcode2022/)



(package
 (name adventofcode)
 (bug_reports "https://github.com/KatrionaGoldmann/adventofcode2022/issues")
 (homepage "https://github.com/KatrionaGoldmann/adventofcode2022/issues")
 (synopsis "Ocaml code for the 2022 advent of code")
 (description "Ocaml code for the 2022 advent of code")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
